- updated the demo

--- a/wcf-dockerize-example/Web.config
+++ b/wcf-dockerize-example/Web.config
@@ -3,12 +3,19 @@
 
   <appSettings>
     <add key="aspnet:UseTaskFriendlySynchronizationContext" value="true" />
+    <add key="ServiceKey" value="from base web.config file"/>
+
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.6.2" />
     <httpRuntime targetFramework="4.6.2"/>
   </system.web>
   <system.serviceModel>
+    <services>
+      <service name="wcf_dockerize_example.Service1">
+        <endpoint address="" binding="webHttpBinding"  behaviorConfiguration="jsonBehavior" contract="wcf_dockerize_example.IService1"/>
+      </service>
+    </services>
     <behaviors>
       <serviceBehaviors>
         <behavior>
@@ -18,10 +25,15 @@
           <serviceDebug includeExceptionDetailInFaults="false"/>
         </behavior>
       </serviceBehaviors>
+      <endpointBehaviors>
+        <behavior name="jsonBehavior">
+          <webHttp/>
+        </behavior>
+      </endpointBehaviors>
     </behaviors>
     <protocolMapping>
-        <add binding="basicHttpsBinding" scheme="https" />
-    </protocolMapping>    
+      <add binding="basicHttpsBinding" scheme="https" />
+    </protocolMapping>
     <serviceHostingEnvironment aspNetCompatibilityEnabled="true" multipleSiteBindingsEnabled="true" />
   </system.serviceModel>
   <system.webServer>
