--- a/wcf-dockerize-example/Web.Release.config
+++ b/wcf-dockerize-example/Web.Release.config
@@ -14,6 +14,12 @@
         xdt:Transform="SetAttributes" xdt:Locator="Match(name)"/>
     </connectionStrings>
   -->
+
+  <appSettings >
+    <add key="ServiceKey" value="from web.release.config" xdt:Transform="SetAttributes"
+         xdt:Locator="Match(key)"/>
+  </appSettings>
+
   <system.web>
     <compilation xdt:Transform="RemoveAttributes(debug)" />
     <!--
